Fix [Models endpoints monitoring, metrics] The scroll is disappeared when collapsed the Endpoint call count (#2594)

--- a/src/components/DetailsMetrics/DetailsMetrics.scss
+++ b/src/components/DetailsMetrics/DetailsMetrics.scss
@@ -217,6 +217,12 @@ $stickyHeaderHeight: 55px;
       }
     }
 
+    &-pin-icon {
+      position: absolute;
+      top: -10px;
+      left: -15px;
+    }
+
     &-invocation-header {
       display: flex;
       flex: 1;
